# sanction

./: .gitignore  Anchor.toml  PLAN.md  README.md  docker-compose.yml  main.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
backend/: README.md
backend/compliance/: Dockerfile  package-lock.json  (+1 more)
cli/: README.md  package-lock.json  package.json  tsconfig.json
deployments/: devnet.json
docs/: API.md  ARCHITECTURE.md  COMPLIANCE.md  OPERATIONS.md  PARAMETER_FLOWS.md  README.md  SDK.md  SSS-1.md  SSS-2.md
frontend/: README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
md files/: phase_01_project_skeleton.md  phase_02_rust_state_and_errors.md  phase_03_rust_initialize_instruction.md  phase_04_rust_core_token_operations.md  phase_05_rust_compliance_operations.md  phase_06_rust_transfer_hook.md  phase_07_typescript_sdk_setup.md  phase_08_typescript_sdk_client.md  phase_09_typescript_sdk_compliance.md  phase_10_cli_application.md  phase_11_backend_shared_db.md  phase_12_backend_indexer.md  phase_13_mint_service_api.md  phase_14_compliance_service_api.md  phase_15_end_to_end_testing.md  phase_16_terminal_ui_dashboard.md  phase_17_react_vite_frontend.md  phase_18_oracle_module_bonus.md  phase_19_private_transfers_bonus.md  phase_20_deployment_and_docs.md
programs/oracle-module/: Cargo.toml
programs/oracle-module/src/: feeds.rs  lib.rs
programs/sss-private/: Cargo.toml
programs/sss-private/src/: lib.rs
programs/sss-token/: Cargo.toml
programs/sss-token/src/: errors.rs  events.rs  lib.rs
programs/sss-token/src/instructions/: blacklist.rs  burn.rs  freeze.rs  initialize.rs  mint.rs  mod.rs  pause.rs  roles.rs  seize.rs  thaw.rs  transfer_authority.rs
programs/sss-token/src/state/: blacklist.rs  config.rs  mod.rs  roles.rs
programs/transfer-hook/: Cargo.toml
programs/transfer-hook/src/: lib.rs  processor.rs
scripts/: demo-sss1.sh  demo-sss2.sh  demo-sss2.ts  deploy-devnet.sh  tsconfig.json
tests/: package.json  tsconfig.json
tui/: README.md  package.json  tsconfig.json
(+70 files in other folders)
