[package]
name = "sss-token"
version = "0.1.0"
description = "Solana Stablecoin Standard Core Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token_2022", "metadata"] }
solana-program = "~1.18.17"
spl-token-metadata-interface = "0.3.5"
spl-pod = "0.2.5"
