[package]
name = "transfer-hook"
version = "0.1.0"
description = "SSS Transfer Hook Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "transfer_hook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token_2022"] }
solana-program = "~1.18.17"
spl-transfer-hook-interface = "0.6.3"
spl-tlv-account-resolution = "0.6.3"
sss-token = { path = "../sss-token", features = ["cpi"] }
